java/java-tests/testData/codeInsight/daemonCodeAnalyzer/javaDoc/Param2.java
class Test {
  /**
   * @param <error descr="Cannot resolve symbol 'param'">param</error> some param
   */
  public void foo() { }
}